[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/life.png" type="Texture" id=1]
[ext_resource path="res://Scripts/HealthIndicator.gd" type="Script" id=2]

[node name="HealthIndicator" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HealthSymbols" type="HBoxContainer" parent="."]
anchor_left = 0.02
anchor_top = 0.03
anchor_right = 0.02
anchor_bottom = 0.03
margin_right = 56.0
margin_bottom = 16.0

[node name="Health1" type="TextureRect" parent="HealthSymbols"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="Health2" type="TextureRect" parent="HealthSymbols"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="Health3" type="TextureRect" parent="HealthSymbols"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
texture = ExtResource( 1 )
